--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-qr-reader": "^2.1.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-qr-reader": "^2.2.1",
     "react-scripts": "3.4.0",
     "typescript": "~3.7.2"
   },
